// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tag/demo/basic.md correctly 1`] = `
<div>
  <div
    class="alu-tag"
  >
    Tag 1
  </div>
  <div
    class="alu-tag"
  >
    <a
      href="https://github.com/ant-design/ant-design/issues/1862"
    >
      Link
    </a>
  </div>
  <div
    class="alu-tag"
  >
    Tag 2
    <i
      class="anticon anticon-close"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </i>
  </div>
  <div
    class="alu-tag"
  >
    Prevent Default
    <i
      class="anticon anticon-close"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </i>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/checkable.md correctly 1`] = `
<div>
  <div
    class="alu-tag alu-tag-checkable alu-tag-checkable-checked"
  >
    Tag1
  </div>
  <div
    class="alu-tag alu-tag-checkable alu-tag-checkable-checked"
  >
    Tag2
  </div>
  <div
    class="alu-tag alu-tag-checkable alu-tag-checkable-checked"
  >
    Tag3
  </div>
</div>
`;

exports[`renders ./components/tag/demo/colorful.md correctly 1`] = `
<div>
  <h4
    style="margin-bottom:16px"
  >
    Presets:
  </h4>
  <div>
    <div
      class="alu-tag alu-tag-magenta"
    >
      magenta
    </div>
    <div
      class="alu-tag alu-tag-red"
    >
      red
    </div>
    <div
      class="alu-tag alu-tag-volcano"
    >
      volcano
    </div>
    <div
      class="alu-tag alu-tag-orange"
    >
      orange
    </div>
    <div
      class="alu-tag alu-tag-gold"
    >
      gold
    </div>
    <div
      class="alu-tag alu-tag-lime"
    >
      lime
    </div>
    <div
      class="alu-tag alu-tag-green"
    >
      green
    </div>
    <div
      class="alu-tag alu-tag-cyan"
    >
      cyan
    </div>
    <div
      class="alu-tag alu-tag-blue"
    >
      blue
    </div>
    <div
      class="alu-tag alu-tag-geekblue"
    >
      geekblue
    </div>
    <div
      class="alu-tag alu-tag-purple"
    >
      purple
    </div>
  </div>
  <h4
    style="margin:16px 0"
  >
    Custom:
  </h4>
  <div>
    <div
      class="alu-tag alu-tag-has-color"
      style="background-color:#f50"
    >
      #f50
    </div>
    <div
      class="alu-tag alu-tag-has-color"
      style="background-color:#2db7f5"
    >
      #2db7f5
    </div>
    <div
      class="alu-tag alu-tag-has-color"
      style="background-color:#87d068"
    >
      #87d068
    </div>
    <div
      class="alu-tag alu-tag-has-color"
      style="background-color:#108ee9"
    >
      #108ee9
    </div>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/control.md correctly 1`] = `
<div>
  <div
    class="alu-tag"
  >
    Unremovable
  </div>
  <div
    class="alu-tag"
  >
    Tag 2
    <i
      class="anticon anticon-close"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </i>
  </div>
  <div
    class="alu-tag"
  >
    Tag 3
    <i
      class="anticon anticon-close"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </i>
  </div>
  <div
    class="alu-tag"
    style="background:#fff;border-style:dashed"
  >
    <i
      class="anticon anticon-plus"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="plus"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M848 474H550V152h-76v322H176c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h298v322h76V550h298c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </i>
     New Tag
  </div>
</div>
`;

exports[`renders ./components/tag/demo/controlled.md correctly 1`] = `
<div>
  <div
    class="alu-tag"
  >
    Movies
    <i
      class="anticon anticon-close"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="close"
        fill="currentColor"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 0 0 203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </i>
  </div>
  <br />
  <button
    class="alu-btn alu-btn-sm"
    type="button"
  >
    <span>
      Toggle
    </span>
  </button>
</div>
`;

exports[`renders ./components/tag/demo/hot-tags.md correctly 1`] = `
<div>
  <h6
    style="margin-right:8px;display:inline"
  >
    Categories:
  </h6>
  <div
    class="alu-tag alu-tag-checkable"
  >
    Movies
  </div>
  <div
    class="alu-tag alu-tag-checkable"
  >
    Books
  </div>
  <div
    class="alu-tag alu-tag-checkable"
  >
    Music
  </div>
  <div
    class="alu-tag alu-tag-checkable"
  >
    Sports
  </div>
</div>
`;
